--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ li {
 }
 
 .App {
+  height: 100vh;
   font-family: font-family.$default;
   font-size: font-size.$default;
   background-color: color.$white;
