--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,4 +33,5 @@ body {
   font-family: font-family.$default;
   font-size: font-size.$default;
   background-color: color.$white;
+  // padding: 0em 2em;
 }
