--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,10 +2,13 @@
 @use "src/scss/abstracts/fonts/letter-spacing";
 @use "src/scss/abstracts/fonts/font-size";
 @use "./../mixins/icon" as *;
+@use "./../mixins/main_padding" as *;
 
 .footer {
     width: 100%;
-    padding: 4.3em 12.69em 3.2em;
+    @include main_padding;
+    padding-top: 4.3em;
+    padding-bottom: 3.2em;
     background-color: color.$black;
     color: color.$white;
     font-size: font-size.$subtitle;
