--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,19 +2,40 @@
 @use "src/scss/abstracts/fonts/letter-spacing";
 @use "src/scss/abstracts/fonts/font-size";
 @use "./../mixins/icon" as *;
+@use "./../mixins/main_padding" as *;
 
 .header {
-    width: 100%;
-    padding: 2em 12.69em;
+    width: 100vw;
     background-color: color.$black;
     color: color.$white;
     font-size: font-size.$subtitle;
+    @include main_padding;
+    padding-top: 2.1em;
+    padding-bottom: 2.1em;
     &__content {
         display: flex;
         justify-content: space-between;
         position: relative;
+        &__logo {
+            @media screen and (min-width: 375px) and (max-width: 870px) {
+                margin-left: 3em;
+            }
+            @media screen and (max-width: 375px) {
+                //fix this
+                margin: 0 35%;
+            }
+        }
         &__icon {
             @include icon("cart");
+            @include icon("hamburger");
+            &--hamburger {
+                position: absolute;
+            }
+        }
+        &__mobile-menu {
+            height: 100vh;
+            width: 100vw;
+            background-color: black;
         }
         &:after {
             content: "";
