--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -13,8 +13,8 @@
     padding-top: 2.1em;
     padding-bottom: 2.1em;
     &__content {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: auto auto;
         position: relative;
         &__logo {
             @media screen and (min-width: 414px) and (max-width: 1440px) {
@@ -28,6 +28,14 @@
         &__icon {
             @include icon("cart");
             @include icon("hamburger");
+            &--cart {
+                @media screen and (max-width: 1440px) {
+                    margin-left: auto;
+                    margin-right: 0;
+                    display: block;
+                }
+            }
+
             &--hamburger {
                 position: absolute;
             }
