--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -11,11 +11,11 @@
     &--footer {
         display: grid;
         grid-template-columns: auto auto;
-        @media screen and (max-width: 1440px) {
+        @media (width <= 1440px) {
             grid-template-columns: auto;
             gap: 1em;
         }
-        @media screen and (max-width: 414px) {
+        @media (width <= 414px) {
             gap: 2.2em;
         }
     }
@@ -28,14 +28,16 @@
         &--footer {
             margin-right: 0;
             margin-left: auto;
-            @media screen and (min-width: 414px) and (max-width: 1280px) {
-                margin-left: 0;
+            @media (414px <= width <= 1280px) {
                 margin-right: auto;
+                margin-left: 0;
             }
-            @media screen and (max-width: 414px) {
+
+            @media (width <= 414px) {
                 display: grid;
                 margin-inline: auto;
                 text-align: center;
+                margin-bottom: 2em;
             }
         }
 
@@ -46,7 +48,7 @@
             margin: auto;
 
             &--open {
-                @media screen and (max-width: 1440px) {
+                @media (width <= 1440px) {
                     flex-direction: column;
                     height: 100vh;
                     justify-content: center;
@@ -59,7 +61,7 @@
         }
     }
     &__logo--footer {
-        @media screen and (max-width: 414px) {
+        @media (width <= 414px) {
             margin-inline: auto;
         }
     }
