--- a/src/scss/mixins/_main_padding.scss
+++ b/src/scss/mixins/_main_padding.scss
@@ -1,11 +1,11 @@
 @mixin main_padding {
     padding-left: 12.69em;
     padding-right: 12.69em;
-    @media screen and (max-width: 870px) {
+    @media (width <= 870px) {
         padding-left: 2.1em;
         padding-right: 2.1em;
     }
-    @media screen and (max-width: 414px) {
+    @media (width <= 414px) {
         padding-left: 1.6em;
         padding-right: 1.6em;
     }
