--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -25,13 +25,13 @@
         margin-top: 2.4em;
         display: grid;
         grid-template-columns: auto auto;
-        @media screen and (max-width: 414px) {
+        @media (width <= 414px) {
             grid-template-columns: auto;
         }
         &__text {
             width: 50%;
             color: grey;
-            @media screen and (max-width: 414px) {
+            @media (width <= 414px) {
                 margin-inline: auto;
                 text-align: center;
             }
@@ -45,7 +45,7 @@
             @include icon("facebook");
             @include icon("twitter");
             @include icon("instagram");
-            @media screen and (max-width: 414px) {
+            @media (width <= 414px) {
                 margin: 2em auto;
                 text-align: center;
             }
@@ -54,7 +54,7 @@
     &__copyright {
         margin-top: 2em;
         color: grey;
-        @media screen and (max-width: 414px) {
+        @media (width <= 414px) {
             text-align: center;
         }
     }
