--- a/src/scss/layouts/_page.scss
+++ b/src/scss/layouts/_page.scss
@@ -1,7 +1,7 @@
 .page {
     display: grid;
     grid-row-gap: 160px;
-    @media (414px <= width <= 1025px) {
-        margin-left: 3em;
-    }
+    // @media (414px <= width <= 1025px) {
+    //     // margin-left: 3em;
+    // }
 }
