--- a/src/scss/layouts/_best-gear.scss
+++ b/src/scss/layouts/_best-gear.scss
@@ -4,7 +4,7 @@
 @use "./../mixins/main_padding" as *;
 
 .best-gear {
-    @include main_padding;
+    // @include main_padding;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 125px;
@@ -40,9 +40,11 @@
         }
     }
     img {
+        max-width: 100%;
+        justify-self: flex-end;
         @media (width <= 1025px) {
             grid-area: 1;
+            justify-self: center;
         }
-        max-width: 100%;
     }
 }
