--- a/src/scss/components/_zx9.scss
+++ b/src/scss/components/_zx9.scss
@@ -12,7 +12,7 @@
         gap: 138px;
         padding: 96px 95px 0 117px;
         z-index: 0;
-        @media (414px <= width <= 1040px) {
+        @media (width <= 1040px) {
             flex-wrap: wrap;
             padding: 52px 0 64px 0;
             gap: 64px;
@@ -38,7 +38,7 @@
         }
         &__text {
             align-self: center;
-            @media (414px <= width <= 1040px) {
+            @media (width <= 1040px) {
                 text-align: center;
             }
 
