--- a/src/scss/components/_h.scss
+++ b/src/scss/components/_h.scss
@@ -5,10 +5,27 @@
 .h1 {
     font-size: font-size.$H1;
     font-weight: bold;
-    &__white {
+    &--white {
         color: white;
+    }
+    &--black {
+        color: black;
     }
     @media (width <= 1025px) {
         font-size: font-size.$H3;
+    }
+}
+
+.h4 {
+    font-size: font-size.$H4;
+    font-weight: bold;
+    &--white {
+        color: white;
+    }
+    &--black {
+        color: black;
+    }
+    @media (width <= 1025px) {
+        font-size: font-size.$overline;
     }
 }
