--- a/src/scss/components/_zx9.scss
+++ b/src/scss/components/_zx9.scss
@@ -12,9 +12,10 @@
         gap: 138px;
         padding: 96px 95px 0 117px;
         z-index: 0;
+        border-radius: 8px;
         @media (width <= 1040px) {
             flex-wrap: wrap;
-            padding: 52px 0 64px 0;
+            padding: 52px 24px 64px 24px;
             gap: 64px;
             justify-content: center;
         }
