--- a/src/scss/entities/_yx1.scss
+++ b/src/scss/entities/_yx1.scss
@@ -7,20 +7,21 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 32px;
+    width: 100%;
     @media (414px >= width) {
         gap: 24px;
     }
-
     position: relative;
     z-index: 0;
-    border-radius: 8px;
     &__img {
-        width: 50%;
-        z-index: 1;
         border-radius: 8px;
+        flex-basis: calc(50% - 16px);
+        @media (414px >= width) {
+            width: 40%;
+        }
     }
     &__plate {
-        width: 50%;
+        flex-basis: calc(50% - 16px);
         border-radius: 8px;
         background-color: color.$light-grey;
         &__text {
