--- a/src/scss/shared/_h.scss
+++ b/src/scss/shared/_h.scss
@@ -26,6 +26,6 @@
         color: black;
     }
     @media (width <= 1025px) {
-        font-size: font-size.$overline;
+        font-size: font-size.$H4;
     }
 }
