--- a/src/scss/entities/_yx1.scss
+++ b/src/scss/entities/_yx1.scss
@@ -4,41 +4,36 @@
 
 .yx1 {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     gap: 32px;
-    width: 100%;
-    @media (414px >= width) {
+    // width: 100%;
+    @media (800px >= width) {
+        flex-direction: column;
         gap: 24px;
     }
-    position: relative;
-    z-index: 0;
     &__img {
         border-radius: 8px;
-        flex-basis: calc(50% - 16px);
-        @media (414px >= width) {
-            width: 40%;
+        width: calc(50% - 16px);
+        @media (800px >= width) {
+            width: 100%;
         }
     }
     &__plate {
-        flex-basis: calc(50% - 16px);
+        width: calc(50% - 16px);
+        padding: 6em 9em;
         border-radius: 8px;
         background-color: color.$light-grey;
+        @media (width <= 800px) {
+            width: 100%;
+            padding: 2.5em;
+        }
         &__text {
             display: grid;
             gap: 32px;
-            z-index: 2;
-            position: absolute;
             align-self: center;
-            transform: translate(50%, 50%);
             border-radius: 8px;
-            @media (414px < width <= 1040px) {
-                transform: translate(50%, 150%);
-            }
-            @media (414px >= width) {
-                transform: translate(2em, 5em);
-            }
             &__button {
+                margin-top: 32px;
                 margin-bottom: 46px;
             }
         }
