--- a/src/scss/entities/_zx7.scss
+++ b/src/scss/entities/_zx7.scss
@@ -7,24 +7,24 @@
     &__plate {
         position: relative;
         z-index: 0;
-        border-radius: 8px;
         &__img {
             width: 100%;
-            z-index: 1;
             border-radius: 8px;
         }
         &__text {
             display: grid;
-            gap: 32px;
             z-index: 2;
             position: absolute;
-            align-self: center;
-            transform: translate(50%, 50%);
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            padding: 3em 5em;
             @media (414px < width <= 1040px) {
-                transform: translate(50%, 150%);
+                padding: 4em 3em;
             }
             @media (414px >= width) {
-                transform: translate(2em, 5em);
+                padding: 2.6em;
             }
             &__button {
                 margin-bottom: 46px;
