--- a/src/scss/abstracts/fonts/_letter-spacing.scss
+++ b/src/scss/abstracts/fonts/_letter-spacing.scss
@@ -1,8 +1,12 @@
-$H1: 2px;
-$H2: 1.5px;
-$H3: 1.15px;
-$H4: 2px;
-$H5: 1.7px;
-$H6: 1.3px;
-$overline: 10px;
+$all: (
+    H1: 2px,
+    H2: 1.5px,
+    H3: 1.15px,
+    H4: 2px,
+    H5: 1.7px,
+    H6: 1.3px,
+    overline: 10px,
+    subtitle: 1px,
+);
+
 $subtitle: 1px;
