--- a/src/scss/mixins/_main-padding.scss
+++ b/src/scss/mixins/_main-padding.scss
@@ -1,4 +1,4 @@
-@mixin main_padding {
+@mixin main-padding {
     padding-left: 12.69em;
     padding-right: 12.69em;
     @media (width <= 1024px) {
