--- a/src/scss/widgets/_best-gear.scss
+++ b/src/scss/widgets/_best-gear.scss
@@ -1,6 +1,6 @@
 @use "src/scss/abstracts/color";
 @use "src/scss/abstracts/fonts/font-size";
-@use "./../mixins/main_padding" as *;
+@use "./../mixins/main-padding" as *;
 @use "sass:map";
 
 .best-gear {
@@ -23,15 +23,7 @@
             text-align: center;
         }
         &__headline {
-            // font-size: font-size.$H2;
-            // font-weight: bold;
             margin-bottom: 32px;
-            // @media (width <= 1025px) {
-            //     font-size: map.get(font-size.$all, H5);
-            // }
-            &__highlight {
-                color: color.$dark-orange;
-            }
         }
         &__description {
             font-size: map.get(font-size.$all, overline);
