--- a/src/scss/widgets/_footer.scss
+++ b/src/scss/widgets/_footer.scss
@@ -1,11 +1,11 @@
 @use "src/scss/abstracts/color";
 @use "src/scss/abstracts/fonts/font-size";
 @use "./../mixins/icon" as *;
-@use "./../mixins/main_padding" as *;
+@use "./../mixins/main-padding" as *;
 @use "sass:map";
 
 .footer {
-    @include main_padding;
+    @include main-padding;
     width: 100vw;
     padding-top: 4.3em;
     padding-bottom: 3.2em;
