--- a/src/scss/widgets/_header.scss
+++ b/src/scss/widgets/_header.scss
@@ -1,10 +1,10 @@
 @use "src/scss/abstracts/color";
 @use "src/scss/abstracts/fonts/font-size";
 @use "./../mixins/icon" as *;
-@use "./../mixins/main_padding" as *;
+@use "./../mixins/main-padding" as *;
 
 .header {
-    @include main_padding;
+    @include main-padding;
     width: 100vw;
     background-color: color.$black;
     color: color.$white;
